--- a/src/main/java/ch/zhaw/parallelComputing/view/GUI.form
+++ b/src/main/java/ch/zhaw/parallelComputing/view/GUI.form
@@ -45,6 +45,7 @@
               </grid>
             </constraints>
             <properties>
+              <selected value="true"/>
               <text value="Evaluate "/>
             </properties>
           </component>
@@ -71,6 +72,7 @@
               </grid>
             </constraints>
             <properties>
+              <selected value="false"/>
               <text value="Show Columns"/>
             </properties>
           </component>
