--- a/src/main/java/ch/zhaw/parallelComputing/view/SelectMapAttributes.form
+++ b/src/main/java/ch/zhaw/parallelComputing/view/SelectMapAttributes.form
@@ -170,7 +170,7 @@
               <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Logging"/>
+              <text value="Log MAP part results"/>
             </properties>
           </component>
           <component id="83500" class="javax.swing.JLabel">
