--- a/src/main/java/ch/zhaw/parallelComputing/view/GUI.form
+++ b/src/main/java/ch/zhaw/parallelComputing/view/GUI.form
@@ -37,7 +37,7 @@
             <properties>
               <hideActionText value="false"/>
               <horizontalTextPosition value="0"/>
-              <text value="Select input"/>
+              <text value="Select input file"/>
             </properties>
           </component>
           <component id="7b216" class="javax.swing.JButton" binding="selectCompareButton">
@@ -45,8 +45,9 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <hideActionText value="true"/>
               <horizontalTextPosition value="0"/>
-              <text value="Select comparison"/>
+              <text value="Select comparison file"/>
             </properties>
           </component>
           <component id="d5d0a" class="javax.swing.JRadioButton" binding="compareRadioButton" default-binding="true">
@@ -85,6 +86,14 @@
             </constraints>
             <properties>
               <text value="Start"/>
+            </properties>
+          </component>
+          <component id="5dfe3" class="javax.swing.JButton" binding="selectResultButton">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Select result file"/>
             </properties>
           </component>
         </children>
