--- a/src/main/java/ch/zhaw/parallelComputing/view/MapAttributesDialog.form
+++ b/src/main/java/ch/zhaw/parallelComputing/view/MapAttributesDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ch.zhaw.parallelComputing.view.SelectMapAttributes">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ch.zhaw.parallelComputing.view.MapAttributesDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -154,7 +154,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Lines per MAP task"/>
+              <text value="Tweets per MAP task"/>
             </properties>
           </component>
           <component id="8ff2f" class="javax.swing.JTextField" binding="offsetField" custom-create="true">
